# StereoCrafter

./: README.md  depth_splatting_inference.py  inpainting_inference.py  pyproject.toml
docs/: stereocrafter_modernization_plan.md  stereocrafter_pipeline.md
